--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@ archives_base_name = packetlogger
 maven_group = io.github.haykam821
 mod_version = 1.0.0
 
+org.gradle.jvmargs = -Xmx1G
+
 # Versions
 minecraft_version = 1.16.5
 yarn_mappings = 1.16.5+build.5
